--- a/.github/workflows/make_ndk_musl.yml
+++ b/.github/workflows/make_ndk_musl.yml
@@ -200,8 +200,8 @@ jobs:
           OBJCOPY=${TOOLCHAIN}/bin/objcopy \
           AR=${TOOLCHAIN}/bin/ar \
           STRIP=${TOOLCHAIN}/bin/strip \
-          CFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
-          CXXFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
+          CFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -g0 -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
+          CXXFLAGS="-O3 -fstack-clash-protection -fstack-protector-strong -g0 -static-pie -Wno-error=date-time -Wno-unused-command-line-argument" \
           LDFLAGS="-Wl,-z,relro,-z,now -s -static-pie" \
           ac_cv_func_dlopen=no ac_cv_file__dev_ptmx=no ac_cv_file__dev_ptc=no
           make -j"$(nproc --all)" build_all || echo "WARNING: issue in building python for ${{ matrix.target }}"
